# bio_files

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: CI.yml
examples/: electron_density.rs  forcefields.rs  gromacs.rs  md_trajectory.rs  molecules.rs
python/: Cargo.toml  PYPI_README.md  pyproject.toml
python/src/: amber_params.rs  gro.rs  lib.rs  md_params.rs  mmcif.rs  mol2.rs  orca.rs  sdf.rs  xyz.rs
src/: ab1.rs  amber_params.rs  amber_typedef.rs  bond_inference.rs  cif_sf.rs  dat.rs  dcd.rs  frcmod.rs  gro.rs  lib.rs  map.rs  map_loading.rs  md_params.rs  mmcif.rs  mmcif_aux.rs  mol2.rs  mol_templates.rs  orca.rs  pdbqt.rs  prmtop.rs  sdf.rs  xtc.rs  xyz.rs
src/gromacs/: gro.rs  mdp.rs  mod.rs  output.rs  solvate.rs  topology.rs  trr.rs
src/orca/: basis_sets.rs  charges.rs  dynamics.rs  geom.rs  method.rs  mod.rs  plots.rs  scf.rs  solvation.rs
tests/: sdf_multi.rs
