[package]
name = "bio_files"
version = "0.1.0"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Save and load common biology file formats."
keywords = ["mol2", "sdf", "molecule", "biology"]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
repository = "https://github.com/David-OConnor/bio_files"
documentation = "https://docs.rs/bio_files"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
byteorder = "1.5.0"  # For use with map.
na_seq = "0.2.8"
bio_apis = "0.1.3"
lin_alg = "1.1.10"

# todo: Ditch `bio` for your own FASTA parser.
bio = "2.3.0"

bincode = { version = "2.0.1", optional = true }


[features]
encode = ["bincode"]